--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "minimist": "^1.2.8",
     "pkg-types": "^1.3.1",
     "playwright": "^1.51.1",
+    "postcss-import": "^16.1.1",
     "progress": "^2.0.3",
     "rollup": "^3.29.5",
     "rollup-plugin-visualizer": "^5.14.0",
